<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.java.tamhou.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.java.tamhou.ui.favorites.GalleryFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_seen"
        android:name="com.java.tamhou.ui.seen.SlideshowFragment"
        android:label="@string/menu_seen"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.java.tamhou.ui.settings.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_recommendation"
        android:name="com.java.tamhou.ui.Recommand.RecommandFragment"
        android:label="@string/menu_recommendation"
        tools:layout="@layout/fragment_news" />

</navigation>